<?xml version="1.0"?>
<package format="2">
  <name>cmu_16662_robot_utils</name>
  <version>0.0.0</version>
  <description>TBD</description>

  <maintainer email="tel1@andrew.cmu.edu">Timothy Lee</maintainer>
  <author email="tel1@andrew.cmu.edu">Timothy Lee</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamixel_workbench_toolbox</depend>
</package>
